[package]
name = "bdkstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
bip39 = "^1.0.1"
bdk = { version = "0.18.0",features = ["all-keys"]}
bdk-macros = "0.6"
structopt = "^0.3"
serde_json = { version = "^1.0" }
log = "^0.4"
base64 = "^0.11"
zeroize = { version = "<1.4.0" }
rand = "0.5"
hmac-sha512 = "1.1.1"


